--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
       "@env": ["configs/env"],
       "@enum": ["configs/enum"],
       "@models": ["app/models"],
+      "@models/*": ["app/models/*"],
       "@views": ["app/views"],
       "@controllers": ["app/controllers"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
@@ -48,7 +49,7 @@
     // "resolvePackageJsonExports": true,                /* Use the package.json 'exports' field when resolving package imports. */
     // "resolvePackageJsonImports": true,                /* Use the package.json 'imports' field when resolving imports. */
     // "customConditions": [],                           /* Conditions to set in addition to the resolver-specific defaults when resolving imports. */
-    // "resolveJsonModule": true,                        /* Enable importing .json files. */
+    "resolveJsonModule": true,                        /* Enable importing .json files. */
     // "allowArbitraryExtensions": true,                 /* Enable importing files with any extension, provided a declaration file is present. */
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
